--- a/src/app/integration/integration.component.html
+++ b/src/app/integration/integration.component.html
@@ -1,7 +1,7 @@
 <div class="integration">
     <div class="integration__container">
-        <section fxLayout="row" class="integration__container__section">
-            <div fxLayout="column" fxFlex="45%" fxLayoutAlign="center flex-start" class="integration__container__section__box">
+        <section fxLayout.gt-sm="row" fxLayout="column" class="integration__container__section">
+            <div fxLayout="column" fxFlex.gt-sm="45%" fxLayoutAlign="center flex-start" class="integration__container__section__box">
                 <h2>Seamless Integration</h2>
                 <div class="integration__container__section__box__divider"></div>
                 <p>
@@ -20,7 +20,7 @@
                     It's that simple!
                 </p>
             </div> 
-            <div fxFlex="55%" fxLayoutAlign="center center">
+            <div fxFlex.gt-sm="55%" fxLayoutAlign="center center">
                 <img width="80%" src="../../assets/images/integ.png" alt="">
             </div>
         </section>
