--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -6,8 +6,9 @@
     justify-content: center;
     align-items: center;
     &__container{ 
-        margin: 5% 0 5%;
         width: 70vw;
+        margin:8rem 0; 
+        
         h2 {
             color: map-get($colors, headings );
         }
