--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,6 +1,8 @@
 <div class="blog">
   <div class="blog__container">
-    <img width="25%" src="../../assets/images/blog.png" alt="blog picture">
+    <div class="blog__container__image">
+      <img width="100%" src="../../assets/images/blog.png" alt="blog picture">
+    </div>
     <button mat-raised-button>
       <a href="http://linkedin.com" target="_blank">Read Our Blog</a>
     </button>
