--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,8 +1,12 @@
-<div class="nav" >
-    <div class="nav__logo">
+<div class="nav" fxLayout="row" fxLayoutGap="3%">
+    <div fxFlex="30%" fxLayoutAlign="flex-start" class="nav__logo">
         <h1>Responsibly</h1> 
     </div>
     <mat-nav-list 
+        fxFlex="30%"
+        fxLayoutAlign="center"
+        fxShow.gt-sm="true"
+        fxShow="false"
         class="nav__list"
         role="menu"
         >
@@ -17,4 +21,13 @@
           {{menuItem.text}}
         </a>
     </mat-nav-list>
+    <a
+        class="nav__burger"
+        fxFlex="30%"
+        fxHide.gt-sm="true"
+        fxHide="false"
+        fxLayoutAlign="flex-end"
+        (click)="onToggleSidenav()">
+      <mat-icon>menu</mat-icon>
+</a>
 </div>
