--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,7 +1,6 @@
 .nav {
     width: 100%;
     height: 12vh;
-    display: flex;
     position: fixed;
     z-index: 100;
     background-color: white;
@@ -9,8 +8,15 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        width: 30%;
         margin-left: 2rem;
+    }
+
+    &__burger{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        cursor: pointer;
+    
     }
     &__list{
         padding: 0;
