toggle side nav p2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,6 @@
 <div class="app">
- 
   <nav class="app__navbar">
-    <app-nav (sidenavToggle)="sidenav.toggle()"></app-nav>
-    <mat-sidenav #sidenav role="navigation" fxShow.gt-sm="false" fxShow="true">
-      <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
-    </mat-sidenav>
+    <app-nav></app-nav>
   </nav>
   <section role="main" class="app__main">
     <app-main></app-main>
