--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="nav" fxLayout="row" fxLayoutGap="3%">
-    <div fxFlex="30%" fxLayoutAlign="flex-start" class="nav__logo">
-        <h1>Responsibly</h1> 
+    <div fxFlex="60%" fxFlex.gt-sm="30%" fxLayoutAlign="flex-start center" class="nav__logo">
+        <div>Responsibly</div> 
     </div>
     <mat-nav-list 
         fxFlex="30%"
@@ -21,13 +21,14 @@
           {{menuItem.text}}
         </a>
     </mat-nav-list>
-    <a
-        class="nav__burger"
-        fxFlex="30%"
-        fxHide.gt-sm="true"
-        fxHide="false"
-        fxLayoutAlign="flex-end"
-        (click)="onToggleSidenav()">
-      <mat-icon>menu</mat-icon>
-</a>
+    <div class="nav__burger" fxFlex="30%">
+        <a  mat-icon-button
+            fxHide.gt-sm="true"
+            fxHide="false"
+            fxLayoutAlign="center center"
+            (click)="onToggleSidenav()">
+            <mat-icon>menu</mat-icon>
+        </a>
+    </div>
+    
 </div>
