--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,3 +1,4 @@
+@import '../../assets/scss/variables';
 .nav {
     width: 100%;
     height: 12vh;
@@ -9,14 +10,21 @@
         justify-content: flex-start;
         align-items: center;
         margin-left: 2rem;
+        font-size: 1.5rem;
+        font-weight: bold;
     }
 
     &__burger{
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        
         cursor: pointer;
-    
+        margin-right: 2rem;
+        mat-icon{
+            font-size: 1.5rem;
+            color:map-get($colors , primary );
+        }
     }
     &__list{
         padding: 0;
