--- a/src/app/nav/sidenav-list/sidenav-list.component.html
+++ b/src/app/nav/sidenav-list/sidenav-list.component.html
@@ -1,11 +1,14 @@
-<mat-nav-list>
-    <a mat-list-item routerLink="/home" (click)="onSidenavClose()">
-        <mat-icon>home</mat-icon> <span class="nav-caption">Home</span>
+ <div class="sidenav">
+    <a *ngIf="!showBurger" class="sidenav__button__link" (click)="closeNav()">
+        <mat-icon>close</mat-icon>
     </a>
-    <a mat-list-item routerLink="/product" (click)="onSidenavClose()">
-        <mat-icon>assignment_ind</mat-icon> <span class="nav-caption">Owner Actions</span>   
-    </a>
-    <a mat-list-item routerLink="#" (click)="onSidenavClose()">
-        <mat-icon>account_balance</mat-icon><span class="nav-caption">Account Actions</span>
-    </a>
-  </mat-nav-list>
+    <mat-dialog-content>
+      <div>
+          <li class="sidenav__content" *ngFor="let menuField of menuFields">
+              <a (click)="closeNav(menuField)"
+              > {{ menuField | uppercase}}
+              </a>
+          </li>
+      </div>
+    </mat-dialog-content>
+</div>
