fixed argument issue

--- a/src/app/nav/sidenav-list/sidenav-list.component.html
+++ b/src/app/nav/sidenav-list/sidenav-list.component.html
@@ -1,5 +1,5 @@
  <div class="sidenav">
-    <a *ngIf="!showBurger" class="sidenav__button__link" (click)="closeNav()">
+    <a *ngIf="!showBurger" class="sidenav__button__link" (click)="closeMenu()">
         <mat-icon>close</mat-icon>
     </a>
     <mat-dialog-content>
