--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
             </a>
         </div>
     </div>
-    <div class="footer__general">
+    <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row" class="footer__general">
         <div class="footer__general__logo">
             <div>Responsibly</div>
         </div>
