--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -11,18 +11,18 @@
         }
     }
     &__general{
-        display: flex;
-        flex-direction: row;
         background-color: black;
-        height: 5rem;
+        min-height: 5rem;
 
         &__logo{
             margin-left: 1rem;
             font-weight: bold;
+            padding-top: 1rem;
         }
 
         &__terms{
             justify-content: center;
+            padding: 1rem 0;
             a {
                 margin: 0 1rem;
                 font-size: .8rem;
@@ -34,6 +34,7 @@
             justify-content: flex-end;
             margin-right: 1rem;
             font-size: .8rem;
+            padding-bottom: 1rem;
         }
 
         &__logo, &__terms, &__copyright{
