added logo and fixed nav

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,9 +1,10 @@
 <div class="nav" fxLayout="row" fxLayoutGap="3%">
-    <div fxFlex="60%" fxFlex.gt-sm="30%" fxLayoutAlign="flex-start center" class="nav__logo">
-        <div>Responsibly</div> 
+    <div fxLayoutAlign="flex-start center" class="nav__logo">
+        <div class="nav__logo">
+            <img width="60px" src="../../assets/images/Group 5.png" alt=""><span style="margin-left: 16px; color:#3F3D56;">Responsibly</span>
+        </div>
     </div>
     <mat-nav-list 
-        fxFlex="30%"
         fxLayoutAlign="center"
         fxShow.gt-sm="true"
         fxShow="false"
@@ -21,10 +22,8 @@
           {{menuItem.text}}
         </a>
     </mat-nav-list>
-    <div class="nav__burger" fxFlex="30%">
+    <div class="nav__burger" fxHide.gt-sm="true" fxHide="false" fxFlex="30%">
         <a  mat-icon-button
-            fxHide.gt-sm="true"
-            fxHide="false"
             fxLayoutAlign="center center"
             (click)="onToggleSidenav()">
             <mat-icon>menu</mat-icon>
