--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,5 +1,7 @@
 @import '../../assets/scss/variables';
 .nav {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 12vh;
     position: fixed;
@@ -9,7 +11,7 @@
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        margin-left: 2rem;
+        margin-left: 1rem;
         font-size: 1.5rem;
         font-weight: bold;
     }
@@ -27,8 +29,10 @@
         }
     }
     &__list{
+        margin-right: 2rem;
         padding: 0;
-        display: inline-flex;  
+        display: flex; 
+        justify-content: space-evenly; 
         &__item{
             padding: 1rem;
             height: 100%!important;
