--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,7 +16,7 @@
     &__landing,
     &__knowledge,
     &__integration {
-     
+      margin-top: 10rem;
 
       &__box {
         display: flex;
