fixed footer links

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,8 @@
     </div>
     <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row" class="footer__general">
         <div class="footer__general__logo">
-            <div>Responsibly</div>
+            <img width="30px" src="../../assets/images/Group 5.png" alt="">
+            <div style="margin-left:1rem;">Responsibly</div>
         </div>
         <div class="footer__general__terms">
            <a href="">Terms & Conditions</a>
