--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 12vh;
+    height: 5.5rem;
     position: fixed;
     z-index: 100;
     background-color: white;
