--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -6,25 +6,25 @@
   }
   /* Small devices (portrait tablets and large phones, 600px and up) */
   @mixin small-screen {
-    @media only screen and (min-width: 600px) {
+    @media only screen and (min-width: 601px) and (max-width: 768px) {
       @content;
     }
   }
 /* Medium devices (landscape tablets, 768px and up) */
   @mixin medium-screen {
-    @media only screen and (min-width: 768px) {
+    @media only screen and (min-width: 769px) and (max-width: 992px) {
       @content;
     }
   }
 /* Large devices (laptops/desktops, 992px and up) */
   @mixin large-screen {
-    @media only screen and (min-width: 992px) {
+    @media only screen and (min-width: 993px) and (max-width: 1536px) {
       @content;
     }
   }
   /* Extra large devices (large laptops and desktops, 1200px and up) */
   @mixin extra-large-screen {
-    @media only screen and (min-width: 1200px) {
+    @media only screen and (min-width: 1537px){
       @content;
     }
   }
