--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -27,6 +27,9 @@
 
         &__title {
           font-size: 2.2rem;
+          @include extra-large-screen {
+            font-size: 3.5rem;
+          }
           color: map-get($colors, headings);
           @include extra-small-screen {
             text-align: center;
